少壮派政变

--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -1175,8 +1175,8 @@
  qiecoup.22.t:0 "皇帝一鸣惊人"
  qiecoup.22.d:0 "溥仪紧张地走回房间，凝视着地上两具满是弹孔的尸体——曾经的玉帅吴佩孚和他的良师益友、国会总裁曹锟已经确切的死掉了。溥杰和其他几位满族亲兵拿着冲锋枪走了进来，“我敬爱的皇兄，是时候将这一切昭告天下了。”溥仪转身看向溥杰，“我……”他的语气中没有一丝自信，“我不确定我能办到。”正当溥杰准备说些什么的时候，直系叛军的领袖李炳之冲进了殿内。\n\n“陛下！我们已经控制了北京城！”他大力一跪，几乎完全趴在了溥仪面前。“但蒋百里和其他几位直系将军已经撤到了洛阳！他们正打算发起新一轮攻势歼灭我们并占据北京。”溥杰走到溥仪身边，低声耳语到。“现在你是皇上，你得有个皇上的样子。”溥仪努力整理了一番心情。“奉天承运皇帝诏曰，凡未于明日内上表效忠者——”他破音了，但随即故作镇定。“凡未上表效忠者皆为我大清之朝敌！此宜即可布告中外，咸使知悉！”"
  qiecoup.22.a:0 "可恶叛徒，死有余辜！"
- qiecoup.23.t:0 "履行我们的义务"
- qiecoup.23.d:0 "我们从北京得到消息，政变计划顺利进行了！吴佩孚和曹锟在紫禁城中被枪杀。清军将军和那些改邪归正的直系将领们正在动员部队消灭仍然忠于旧政权的人。现在是时候履行我们对皇帝的义务并消灭这些叛徒了！"
+ qiecoup.23.t:0 "守节尽忠"
+ qiecoup.23.d:0 "令人兴奋的消息传到了[ROOT.GetLeader]耳中！北京政变传来顺利的消息，曾经横行无阻的玉帅、保定王二人双双横死！据称，这二人是在紫禁城内妄图负隅顽抗时遭到击毙的，直系也就此乱作一团！报道称王承斌从黄河以北撤离了一切内阁和军方人员，目前仍盘踞在洛阳的吴佩孚老巢做困兽之斗。\n\n看上去满族指挥官们，以及邢士廉这样的共谋人士已经动员起了兵力，打算肃清直系的一切残党。旧政权已然半截入土，我等是时候恪守为人臣之节，对陛下尽忠，一劳永逸地为大清扫灭直系余毒。"
  qiecoup.23.a:0 "消灭那些叛徒！"
  qiecoup.24.t:0 "反政变"
  qiecoup.24.d:0 "曹锟和吴佩孚逃过乾清宫内的一劫后，吴佩孚的近卫们立刻四散进入紫禁城，他们和满族乱党交战的枪声时回荡在宫墙内。几分钟后，他们拖着瑟瑟发抖的溥仪闯进了乾清宫。吴佩孚站在趴在地上的溥仪面前，对身边的卫兵做了个手势。吴佩孚用手枪抵着溥仪的后背将皇帝推到了门口。乾清宫外，聚集了一小批朝臣，包括皇弟溥杰和其他几位满族勋贵。他们打开了朝觐间的门。吴佩孚走出来，旁边跟着的是皇上和押着他的士兵、\n\n“你们那点破招，弄倒我还难了点。”他扭着嘴笑了笑，然后示意近卫把皇帝押回去。“再向前一步，你们的皇帝就该去见阎王爷了。”\n\n实际上，吴佩孚也十分害怕。但这已经不是他第一次和阎王博弈了。“你们会在卫兵的严密看管下进入乾清宫。仲珊公！”他转身看向已经退回乾清宫的国会总裁。“带些人去，把国会的成员请来，越快越好。”他的目光移回溥仪身上。“大清完了，再行共和的时候到了。”\n\n几小时后，直系政府的部队突袭了密谋者的据点，在那里找到的文件证明一些周边的军阀也参与了这次政变。吴佩孚立刻宣称这些人为国贼，并且动员部队准备作战。"
@@ -1196,10 +1196,9 @@
  qiecoup.29.t:0 "繁荣联盟解散！"
  qiecoup.29.d:0 "在最近的动荡局势下，繁荣联盟以“大环境不利”为借口解散了联盟，他们联盟下许多说客都已经离开天津。尽管德国使馆依然留在了北京，但是他们也停止了一切与我们的合作，并从我们手中收回了德制军械以及他们的工业补助。不过民众却意外地支持这些行动，他们纷纷赞扬我们的新政府正在努力摆脱外国势力的影响。"
  qiecoup.29.a:0 "我们不需要他们！"
- qiecoup.30.t:0 "援助大清？"
- qiecoup.30.d:0 "既然我们已经帮助清廷推翻了专横的吴佩孚，我们是否还应该继续帮助他们围剿直系残党？"
- qiecoup.30.a:0 "好的，汇一些钱过去"
- qiecoup.30.b:0 "不"
+ qiecoup.30.t:0 "奉系趁势而动！"
+ qiecoup.30.d:0 "北京正在反直系和排外的暴力中燃烧，很明显，大清帝国的这颗心脏正摇摇欲坠。而盘踞在边境的那群秃鹫却在梳理羽毛、全神贯注，妄图伺机而动，消灭他们的老对头，也就是我们中央政府。如果我们有所疏忽，奉天伪府及老帅张作霖一定会抓住机会，下令发起突袭，一举拿下山海关，正如他们在前几次直奉战争中所做的那样。\n\n不论怎样，如若奉军胆敢发动袭击、犯我疆界，边界守军决不能临阵退缩，不可放任直隶省在奉系的攻势下彻底沦陷。"
+ qiecoup.30.a:0 "部队就位，决不能让张作霖打进来。"
  qiecoup.31.t:0 "我们的盟友伸出了援手！"
  qiecoup.31.d:0 "我们的勋贵盟友已经向我们提供了大笔资金以供剿灭那些盘踞在南部的直系残党！"
  qiecoup.31.a:0 "谢谢您！"
