--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -2,6 +2,11 @@
  Shanxi_Yan_Xishan:0 "晋系国策树"
  Shanxi_Feng_Yuxiang:0 "国民军国策树"
 
+ SHX_FU: "山西"
+ SHX_FU_ADJ: "山西"
+ SHX_FU_DEF: "山西"
+ SHX_FU_paternal_autocrat: "晋系军阀"
+ SHX_FU_paternal_autocrat_DEF: "晋系军阀"
  SHX: "山西"
  SHX_ADJ: "山西"
  SHX_DEF: "山西"
@@ -19,8 +24,8 @@
  SHX_market_liberal_DEF: "晋系军阀"
  SHX_social_conservative: "山西"
  SHX_social_conservative_DEF: "晋系军阀"
- SHX_authoritarian_democrat: "国民军"
- SHX_authoritarian_democrat_DEF: "国民军"
+ SHX_authoritarian_democrat: "国民军政府"
+ SHX_authoritarian_democrat_DEF: "国民军政府"
  SHX_paternal_autocrat: "晋系军阀"
  SHX_paternal_autocrat_DEF: "晋系军阀"
  SHX_national_populist: "晋系军阀"
@@ -200,8 +205,12 @@
  SHX_feng_social_liberal_party_long:0 "太原商会联合\n§g并非所有商人都愿意听从北京或是阎锡山的命令，在山西的命运之赌中，还有的商人选择投入了冯玉祥的怀抱，如今事实证明，他们是对的。当阎锡山败退之后，他们便接管了阎派资产。§!"
  SHX_yan_social_democrat_party:0 "洗心社"
  SHX_yan_social_democrat_party_long:0 "洗心社(Xixinshe)\n§g赵戴文是阎锡山尊重的为数不多的几个在世人物之一，他是阎锡山的老师，对阎锡山的政治哲学有深刻的影响。赵戴文是同盟会成员之一，饱读诗书，潜心佛学，他很可能一手参与了阎锡山的新儒家思想的融合与策划。洗心社是阎锡山推广爱国儒家思想的产物。§!"
+ SHX_fu_authoritarian_democrat_party:0 "新晋系"
+ SHX_fu_authoritarian_democrat_party_long:0 "傅派\n§g傅作义接管了阎锡山的一切政治遗产，并宣布自己依旧是阎锡山的忠诚的部下，仅仅是因为阎锡山已经在和冯玉祥斗争的过程中太过背离了山西的利益而不得已出此下策。尽管赵戴文等阎锡山的忠诚拥趸严厉斥责他的这种说词，但是更多人无论是真的相信，还是出于利益考虑最终选择相信了傅作义的说辞，阎派的历史最终还是走到了末尾。§!"
  SHX_yan_authoritarian_democrat_party:0 "陕军"
  SHX_yan_authoritarian_democrat_party_long:0 "杨虎城派\n§g冯玉祥彻底失败，被逐出了我省，国民军不可逆转地分崩离析。军中的社会主义分子走上了自己的道路，一些冯玉祥的亲信选择跟随他一起流亡，其他人则加入阎锡山的政府，为了一份工作用尽手段，尽管如此，仍有少数人围绕在杨虎城周围，选择继续抗争。杨虎城生于陕西，曾在孙岳的国民军中担任下级军官，在国民军撤退到他的家乡后，他声名大噪，带领这些人藏匿于陕西的山区之中，名义上服从阎锡山节制，称为陕军，杨虎城希望以这种方式保有军事上自治的可能性，同时这也使他饱受非议，尽管杨虎城辩称这是自保所必需的，许多人仍将这种名义上的服从视为对国民军的深刻背叛。无论如何，对于阎锡山来说，这些人在未来所能造成的威胁微乎其微。§!"
+ SHX_fu_paternal_autocrat_party:0 "陕军"
+ SHX_fu_paternal_autocrat_party_long:0 "杨虎城派\n§g冯玉祥彻底失败，被逐出了我省，国民军不可逆转地分崩离析。军中的社会主义分子走上了自己的道路，一些冯玉祥的亲信选择跟随他一起流亡，其他人则加入傅作义的政府，为了一份工作用尽手段。而还有的人如同杨虎城一般，他们本身就是傅作义坚定的盟友，傅作义许诺了他们改革阎锡山政府的独裁，并且一同为了推翻满清，瓦解直系而抗争。§!"
  SHX_feng_paternal_autocrat_party:0 "晋系残党"
  SHX_feng_paternal_autocrat_party_long:0 "新晋系\n§g在阎锡山政府因国民军进击而崩溃的同时，他的追随者争先恐后地在他小王国中开辟自己的立足之地。洗心社狂热者集结了在阎锡山侄子梁化之的旗下，省政人员和乡绅基本上都和王骧一同流亡，而山西省军则被阎锡山的亲信将领瓜分。商震与大批部下分道扬镳并加入了国民军新政府，此举被许多旧省政人员斥为叛变。与此同时，傅作义和徐永昌在旧晋系忠诚派中建立了自己的势力，并山西省的简称命名，称为“新晋系”。尽管人们都认为新晋系会为新政府带来麻烦，但他们应该掀不起什么风雨。§!"
  SHX_jia_jingde_remnant_party:0 "阎锡山忠诚派"
@@ -224,6 +233,7 @@
  SHX_fu_zuoyi_body:0 "傅作义出生于富农之家，1910年考入太原陆军小学堂，一年后，辛亥革命爆发，傅作义加入革命军反抗清政府。1915年他调至第五步兵师，毕业后回到山西老家，加入阎锡山的晋军。作为一名军官，傅作义才华横溢，仕途可谓平步青云——1936年时，他已是陆军中将。"
  SHX_fu_zuoyi_desc:0 "§Y陆军将领介绍\n生于：§!§g1895年6月27日；大清帝国、山西省临猗县§!\n§Y派系：§!§g阎派§!\n§Y军旅生涯：§!§g$SHX_fu_zuoyi_body$§!\n\n§Y重要信息：傅作义极受部下拥戴，他力行节俭，经常能看到他穿着和士兵一样的棉衣，这让他获得了“布衣将军”的美名。"
  SHX_fu_zuoyi_country_leader_desc:0 "§Y领袖介绍\n生于：§!1895年6月27日；大清帝国、山西省临猗县§!\n§Y政治生涯：§!傅作义的上位之路十分曲折，目前尚不清楚他新组建的“太原省政府”是否会长久。国民军的革命终结了阎锡山对山西的统治，而阎锡山手底下的各路人马纷纷自立，互相争斗。此时，旧晋系的部分军方成员组成了“新晋系”，一个以傅作义为首的军政府。如今，德国及其支持的北洋军阀最终击败了冯玉祥，他们需要当地的军队领袖维持大局，于是傅作义就组建了“太原省政府”。表面上，太原省政府与阎锡山政府多年来的立场相似，但傅作义集团并不受欢迎，因为他们对外部势力更加顺从。"
+ SHX_fu_zuoyi_leader_desc:0 "傅作义的上位之路十分曲折，但是最终他成功了，他背叛了对自己信赖有加的阎锡山，也成功突袭了陕西将国民军赶了出去。如今整个山西已经落入了他的掌控之中，他将有机会施展自己的政治抱负，一条绝不同于国民军，也不同于阎锡山的道路，一条绝对以山西利益为首的道路。"
  SHX_wang_jingguo: "王靖国"
  SHX_wang_jingguo_desc:0 "§Y陆军将领介绍\n生于：§!§g1893年7月18日；大清帝国、山西省五台县§!\n§Y派系：§!§g阎派§!\n§Y军旅生涯：§!§g被传为阎锡山亲戚的王靖国是出生于五台县的山西本地人。1911年时进入山西陆军小学堂学习。不久之后辛亥革命爆发，他作为匆忙组建起来的学生军的一员投身于革命。1916年，他决定继续学习军事知识并考入保定军校，在毕业回到陕西为督理阎锡山效力。\n\n在阎锡山的晋军中流传着一件关于他的轶事：有一天在操练时突然天降大雨打断了训练，王靖国和他的部下在其他人的队伍完全被打乱的情况下仍然维持着纪律并有序得返回了营地。他对他的上级忠心耿耿并且天生坚韧不拔，是阎锡山最信任的将领之一。§!\n\n§Y重要信息：作为阎锡山手下最忠诚的得力干将之一，王靖国不会将一丁点信任交给阎督理的对手国民军。§!"
  SHX_yang_aiyuan: "杨爱源"
@@ -307,19 +317,20 @@
  SHX_sfs_active_title_key:0 "逐鹿山西"
  SHX_sfs_inactive_title_key:0 "十年计划继续"
  SHX_sfs_active_desc_key:0 "自从国民军撤退进入山西以来，阎锡山督理和冯玉祥大帅就联合起来对付他们在北方共同的敌人。阎锡山的权力历来以§P省政府§!为根基，他编织维护着一张根深蒂固的微妙利益网络。而冯玉祥的权力根植于§g他对国民军的掌握§!，这支强大的军队支持民族主义，倾向革命，并以其狂热的激情而闻名。\n\n这两位都是豪情满怀的领袖，都对山西的管理有各自的独到创见。山西是个贫穷的省份，这里资源稀缺，哪怕只执行一项涉及未来的议程都稍嫌不够。一度沉寂的§Y十年计划§!，突然受到两派人马的极大重视，他们此时都试图加强自己的合法性。\n\n为了赢得山西的权力斗争，玩家必须让§Y权力平衡处于任意一方的优势处§!以彻底击垮竞争者。但是要小心，并非所有人都完全忠于二位大帅，如果双方的政治斗争过于激烈，也许他们会为了山西的未来而做出自己的选择...\n\n§C少壮派的激进度为：[Getrevolutionline]§!\n§C国民军当前的力量为：[SHX.GMJ_coup_strength]§!"
- SHX_sfs_inactive_desc_key:0 "山西的权力斗争的结束并没有给十年计划画上句号。虽然这个计划最初是作为和平发展经济的手段，也是制衡华北强势派系的手段，但在八省联合崩溃后，它又焕发了新生。在[SHX.GetLeader]的领导下，十年计划是他维持自己的地位并试图争夺国家领导权的计划中不可或缺的一部分。为此，改组后的[SHX.GetNameDef]政府和人民孜孜不倦地执行[SHX.GetLeader]的未来愿景，希望展示他作为开明统治者的智慧，并为其他省份树立榜样。然而，山西是否能配得上其“模范省”的声誉，将不仅取决于其督理的动向，还将取决于其人民的意志和牺牲。\n\n§C少壮派的激进度为：[Getrevolutionline]§!"
+ SHX_sfs_inactive_desc_key:0 "山西的权力斗争的结束并没有给十年计划画上句号。虽然这个计划最初是作为和平发展经济的手段，也是制衡华北强势派系的手段，但在八省联合崩溃后，它又焕发了新生。在[SHX.GetLeader]的领导下，十年计划是他维持自己的地位并试图争夺国家领导权的计划中不可或缺的一部分。为此，改组后的[SHX.GetNameDef]政府和人民孜孜不倦地执行[SHX.GetLeader]的未来愿景，希望展示他作为开明统治者的智慧，并为其他省份树立榜样。然而，山西是否能配得上其“模范省”的声誉，将不仅取决于其督理的动向，还将取决于其人民的意志和牺牲。"
  SHXsmall:0 "§R不值一提§!"
  SHXlittle:0 "§R风雨欲来§!"
  SHXmore:0 "§R暗流涌动§!"
  SHXhuge:0 "§R波涛汹涌§!"
  SHXover:0 "§R清算时间§!"
- SHX_yan_victory_over_gmj:0 "阎锡山赢得了山西的权力斗争"
- SHX_feng_victory_over_yan:0 "冯玉祥赢得了山西的权力斗争"
  SHX_looming_gmj_coup:0 "国民军正在酝酿政变"
  SHX_looming_gmj_coup_desc:0 "自从冯玉祥与阎锡山闹掰后，旧有的阎冯二元体制就开始摇摇欲坠。据报道，国民军已经驻扎在了陕西，以及虽然两人仍持续就省政事务进行沟通，但所有人都能看见冲突之兆。很显然，冯玉祥已经开始组织他那之前处于蟄伏的革命军队，积极行动以争取整个地区的支持。一场革命，或者说一场政变已经迫在眉睫，一山难容二虎，山西的大地上最终只能有一个领导者。\n\n§R如果时间用尽，国民军将成功推翻阎锡山的政府，并建立一个属于他们自己的政府。各类国策、决议和事件将使你能延长或缩短这个时间。§!"
  SHX_special_coup_circumstances_tooltip:0 "§R除非遭受外敌入侵或者其他特殊情况，否则山西的权力斗争将总是以清洗或革命结束。如果国民军错过机会，阎锡山将继续主导政局§!"
+ SHX_special_coup_circumstances_shao_tooltip:0 "§R除非遭受外敌入侵或者其他特殊情况，否则山西的权力斗争将总是以清洗或革命结束。山西需要一个稳定的政府，但为什么一定要是阎锡山或者冯玉祥呢？但是请注意，你必须在阎冯二人决出胜负前干掉他们两个，否则将失去机会§!"
  SHX_purge_the_gmj:0 "清洗国民军"
  SHX_purge_the_gmj_desc:0 "自从冯玉祥与阎锡山闹掰后，旧有的阎冯二元体制就开始摇摇欲坠。据报道，国民军已经驻扎在了陕西，以及虽然两人仍持续就省政事务进行沟通，但所有人都能看见冲突之兆。阎锡山的官僚机构异常活跃，他们正孜孜不倦地解决问题，并为他们的山西主子大肆宣传。很明显，冯玉祥的赌博开始失败了——他正在失去对陕西的控制，农民开始反对他。阎锡山和其效忠派的一次决定性打击将彻底消除国民军的威胁！"
+ SHX_shao_zhuang_pai_zai_yun_dong:0 "少壮派在运动"
+ SHX_shao_zhuang_pai_zai_yun_dong_desc:0 "并非只有阎锡山和冯玉祥在谋求彻底打垮对方，在他们的手底下，以阎派傅作义、冯派杨虎城为代表的一群人也在蓄谋着更进一步，他们不断接触，打着阎锡山和冯玉祥的名号为自己谋求利益。同时北京方面也乐于见得山西陷入更深的混乱，在背后不断的援助。"
  #教育
  Feng_taking_SHX_education_for_all: "重视基础教育"
  Feng_taking_increase_school_taxes: "增加办学税"
@@ -581,6 +592,9 @@
  SHX_yan_loyalist_desc: "§L该名将领隶属于阎锡山的晋军。§!"
 
  SHX_model_governor_tt: "修正§Y阎锡山§!：\n$MODIFIER_COMMAND_POWER_GAIN_MULT$：§G+25%§!"
+ SHX_shao_zhuang_victory_over_all: "少壮派发动了政变"
+ SHX_yan_victory_over_gmj: "阎锡山赢得了山西的权力斗争"
+ SHX_feng_victory_over_yan: "冯玉祥赢得了山西的权力斗争"
  shx_feng_goverment_left_tt: "冯玉祥选择了§R左翼§!盟友们"
  shx_feng_goverment_right_tt: "冯玉祥选择了§g右翼§!盟友们"
  shx_education_yan_path: "§L山西决定高等教育优先§!"
@@ -604,9 +618,10 @@
  SHX_strengthen_feng_small_tooltip: "§g冯玉祥§!的§Y权力§!§G小幅增长！§!"
  SHX_strengthen_feng_medium_tooltip: "§g冯玉祥§!的§Y权力§!§G中幅增长！§!"
  SHX_strengthen_feng_large_tooltip: "§g冯玉祥§!的§Y权力§!§G大幅增长！§!"
- SHX_revolution_small_tooltip: "§R激进度§!§!§G小幅增长！§!"
- SHX_revolution_medium_tooltip: "§R激进度§!§!§G中幅增长！§!"
- SHX_revolution_large_tooltip: "§R激进度§!§!§G大幅增长！§!"
+ SHX_revolution_all_time_tooltip: "§R激进度§!§将G小幅增长！§!"
+ SHX_revolution_small_tooltip: "§R激进度§!将§G小幅增长！§!"
+ SHX_revolution_medium_tooltip: "§R激进度§!将§G中幅增长！§!"
+ SHX_revolution_large_tooltip: "§R激进度§!将§G大幅增长！§!"
  SHX_increase_revolution_small_tooltip: "§R激进度§!§!§Y小幅减少！§!"
  SHX_GMJ_leaves_coalition_tooltip: "§R国民军离开了我们的联盟。§!"
  SHX_commissars_tt: "§L完成这个国策将会允许我们加强阎锡山或冯玉祥的影响力。§!"
@@ -1427,9 +1442,6 @@
  shx.earlygame.16.t:0 "省议会"
  shx.earlygame.16.d:0 "议长的发言还没有结束，冯阎两派的议员们便早早的吵作一团，相互嘘声。尽管，两派的大佬们互相都和和气气的，说些你好我好大家好的话。但是议院内，预算、法案、政策一切的提案双方都无法达成共识。久而久之，这些基本上毫无军事背景的议员们甚至不止一次在议院内上演全武行，更甚至一次议期内发生多次斗殴，早上一帮阎派议员刚把冯派议员打进医院，下午又被更多冯派议员围殴。一方动手，另一方火速跟上，能动手的事情他们绝不含糊，南拳北腿，纸笔座椅板凳一切顺手的东西都是他们的武器，单挑、群架、男单、男双，花样百出，上演一场又一场“铁血战役”，议院简直是一场又一场武斗大会。省内的花边小报还常常列出议员拳王表，从议员们的“战绩”中品鉴议员们的拳脚功夫。而比起议员们的暴力，国民军和晋绥军的克制反而显得尤为珍贵，令北京来的观察员不禁摇头叹息。"
  shx.earlygame.16.a:0 "勃勃生机"
- shx.409.t:0 "大清行省"
- shx.409.d:0 "由于对宣统维新的支持，山西省长阎锡山开始自称“山陕总督”，并改挂大清的省旗以示对北京新政府的支持。"
- shx.409.a:0 "很好！"
 
  shx.yan.1.t:0 "官僚体系的最新状况"
  shx.yan.1.d:0 "建立一个中央集权的官僚系统是晋系未来最看重的目标之一，为此我们实施了许多方案，在最近终于起了点成效。山西只有一百多个县，每个县都需要一个县长，而县长又需要一个行政人员来协助管理。大多数县又被分成了三到六个区，每个区由一名副县长管辖。这些县长在太原培训中心和行政学院学习，并在新成立的乡镇局下任职。\n\n坏消息是，腐败横行，过去很长一段时间行政部门为了避免开革太多人而拒绝采用业绩考察机制。许多官员甚至大字不识几个，尸位素餐，还经常侵吞公产、勒索百姓。我们对此实施的第一批举错之一是废除包税制，并且把那些尸位素餐和贪污受贿的家伙扫地出门。虽然还有不少事要做，但千里之行，始于足下。"
@@ -1629,10 +1641,13 @@
  shx.powerstruggle.5.intro:0 "在军阀时代，领导权不再由法律和职务定义，而是由人脉和社会地位决定。此类强人政治并不靠华而不实的勋章和头衔维系，靠的是他们在军队、学界、政界、社会人士和文职下属中的庞大关系网络。这套体系让他们能在生活的方方面面显得长袖善舞（或者至少在他们的触角能伸到的地方）。这也意味着，在与这些强人独裁者的斗争中擒贼先擒王将会一击粉碎他们的势力。"
  shx.powerstruggle.5.yan.d:0 "$shx.powerstruggle.5.intro$\n\n在阎派成功反政变后的日子里，冯玉祥要么藏入深山，要么出逃省外，妄图能活着看到陕西新政权的倒台。其部众大多已经归降或被处决，但国民军残部仍在山区负隅顽抗。对其置之不理只会威胁山西今后的稳定。我们可以招安这群败者，也可以驱逐国民军，把他们彻底碾碎。"
  shx.powerstruggle.5.feng.d:0 "$shx.powerstruggle.5.intro$\n\n如被将军一般，太原失守后，阎锡山被赶回了河边村老家，也许还在妄想国民军的统治会自己垮掉。很少有老下属来看望他，他显得孤苦伶仃。但仅仅把他软禁会在我们新获地区的核心留下一个隐患。我们得在与阎派和解和彻底击碎他们之间作出选择。"
+ shx.powerstruggle.5.fu.d:0 "$shx.powerstruggle.5.intro$\n\n如被将军一般，阎锡山被自己部下请入了太原城内的一处豪宅中软禁了起来，也许还在妄想叛徒傅作义的统治会自己垮掉。而傅作义等人时常前来探望，生怕再在军阀间背上一些骂名，也希望阎锡山能为自己说几句好话，让那些还忠于他的傅作义的同僚们能放弃那些不切实际的幻想。而冯玉祥呢？他要么藏入深山，要么出逃省外，妄图能活着看到陕西新政权的倒台。其部众大多已经归降或被处决，但国民军残部仍在山区负隅顽抗。对其置之不理只会威胁山西今后的稳定。我们可以招安这群败者，也可以驱逐国民军，把他们彻底碾碎。"
  shx.powerstruggle.5.yan.a:0 "派代表去传达一些“慷慨”的条款。"
  shx.powerstruggle.5.yan.b:0 "让人受些轻伤会招来报复，给他重创就不会了。"
  shx.powerstruggle.5.feng.a:0 "我们过去不是互换兰谱的义兄弟吗？"
  shx.powerstruggle.5.feng.b:0 "不是你死就是我亡。"
+ shx.powerstruggle.5.fu.a:0 "该往前看了"
+ shx.powerstruggle.5.fu.b:0 "处理完他们再看"
  shx.powerstruggle.7.t:0 "处理叛徒"
  shx.powerstruggle.7.yan.d:0 "虽然冯玉祥命数已定，他的部众却挺麻烦——这样一个由不同顾问和掌权人组成的圈子将让冯玉祥能够在日渐壮大的国民军中施加影响。国民军很大程度上是一支军队，因此冯玉祥很依赖少数人选来维持文官统治的表象。他们对我们来说是否有用还有待商榷。\n\n冯玉祥的文职顾问大多很激进，主要由社会主义煽动者、激进的知识分子和一些神职人员组成。有不少同志建言道，应该清洗他们了事，他们不仅没什么用，对我们的忠诚也存疑。但另有言道，有时得让敌人离得比朋友更近。"
  shx.powerstruggle.7.yan.a:0 "宽恕是种美德。"
@@ -1647,6 +1662,9 @@
  shx.powerstruggle.8.feng.d:0 "省军被击败了，但头疼的事还没办完。阎锡山有很多副手和指挥，随着前省军命数已尽，许多人对自己的前途愈发感到不安。大多数低级军官应该能更容易地效命于新长官（无论好坏这都只是他们眼下工作的一部分），但高级军官们可能比较棘手。\n\n这群业已失败的军官们由阎锡山的二把手傅作义和徐永昌领导，在低级军官中仍然有相当多的效忠者。与他们的大多数下属不同，他们有大把时间与我们的国民军往来。商震，一个刚刚叛变到我方的前省军高层领导，建议把他们留为己用。但另一些人，或出于嫉妒，或只是想保护国民军免遭渗透，建议把他们逐出山西。"
  shx.powerstruggle.8.feng.a:0 "往者不可谏，来者犹可追。"
  shx.powerstruggle.8.feng.b:0 "花拳绣腿，于我军无益。"
+ shx.powerstruggle.8.fu.d:0 "虽然晋绥军基本被我们控制了起来，许多人对自己的前途愈发感到不安。大多数低级军官应该能更容易地效命于新长官（无论好坏这都只是他们眼下工作的一部分）。但高级军官们可能比较棘手，并非所有将领都愿意服从傅作义，他们坚持要求傅作义下台，希望阎锡山重新掌权。\n\n国民军方面同样如此，杨虎城无法完全说服他的同僚们相信傅作义能让山陕变得更好。尽管杨虎城和商震都力劝我们将这些人留为己用。但另一些人，或出于嫉妒，或只是想保护晋绥军免遭渗透，建议把他们逐出山西。"
+ shx.powerstruggle.8.fu.a:0 "制服一换，皆大欢喜。"
+ shx.powerstruggle.8.fu.b:0 "他们还想当将军？笑话！"
  shx.powerstruggle.9.t:0 "再续旧盟"
  shx.powerstruggle.9.d:0 "局势急转直下，阎锡山和冯玉祥之间激烈的权力斗争已经结束，其终局对任何一方都无益处，却给外部挑战者创造了机会。无论这是对分裂中的山西趁虚而入，还是省内强人阴谋诡计破产的结果，外部侵略者已开始对太原和延安同时采取行动，迫使这对曾经的结义兄弟在绝望中再续旧盟。\n\n在商震和徐永昌等主要军官斡旋的一系列紧急谈判中，条件已经确定。阎锡山将领导新政府，而冯玉祥大帅将继续担任二把手。冯玉祥和国民军所扶植的社会主义鼓动者将被清除出队伍，而阎锡山政府中勾连北京的合作者也将被同样驱逐。\n\n国民军向阎锡山的文官政府屈服标志着阎锡山的巨大胜利，然而，两人更宏伟的计划已经破灭。冯玉祥和国民军已经失去了从阎锡山手中夺权的机会，而阎锡山完全固权的可能也不复存在。与此同时，国民军和省军在战壕中并肩作战，阻击敌人。这种联盟是否足以保住任何一个人的权力目前还无从知晓，但情势所迫，合作以外别无他法。"
  shx.powerstruggle.9.a:0 "结义兄弟，理固宜然。"
@@ -1657,6 +1675,9 @@
  shx.powerstruggle.12.t:0 "蟠桃"
  shx.powerstruggle.12.d:0 "太原的街头上，贴满了对国民军残部的通缉令，虽然冯玉祥已经落网，杨虎城宣布切割，但是阎锡山督理对斩草除根这件事非常的执着。他加强了搜查力度，扬言：“让国民军反动分子葬身山西！”\n\n而在山西某处，几个人正对着一张中国地图沉思。良久，一个稍微年轻点的人开口了：“哲元，现在那老东西的爪牙在外面严查我们，我们下一步去哪里？”那位哲元先生吸了一口烟：“北京那边和阎老狗是一伙的，西边的马家军也不是什么好狗。按照地图上的信息来看，南京的控制者是国民党的汪精卫。我们同是国民革命军，他们应该会接纳我们。”\n\n这时，那个稍显头秃的人站起来：“对于这个建议，我是没有什么意见的，不过国民党内部混乱不堪。到时候记得别站队，明哲保身才是重要的。”“既然复渠都这么说了，那我们即日启程。”宋哲元讲完，立即准备动身。两个星期后，当张自忠等人站在南京城下的时候，汪精卫主席亲自出门迎接，为国民军众人安排了新的职位。并强调..."
  shx.powerstruggle.12.a:0 "革命尚未成功，我们必须团结能团结的所有力量..."
+ shx.powerstruggle.13.t:0 "少壮派政变"
+ shx.powerstruggle.13.d:0 " "
+ shx.powerstruggle.13.a:0 " "
 
  shx.QIE.aid.1.t:0 "太原火车谈判脱轨"
  shx.QIE.aid.1.d:0 "虽然华南铁路项目的成功让东亚总督监事会的声望如日中天，但他们在北方就没那么好运了。其在北京福公司的子公司已经和固执的山西督理阎锡山谈判了数月，而我们的代表在其中充当中间人。虽然他们在争取诸如山西省银行总经理王骧等政府要员的支持上取得了相当大的进展，但谈判最终还是陷入了停滞。\n\n阎锡山（在心怀反意的冯玉祥大帅怂恿下）选择退出谈判，拒绝对我方要求让步，即在东亚监事会援建铁路项目（注意，这是我们资助的）中使用标准轨距，而不是阎锡山指定的窄轨距。他指责我们不仅试图破坏其自主权，还计划以此让我军日后侵略山西变得更容易。\n\n且不论这种指控有多么骇人，谈判的破裂就是山西自本世纪初起就一直处于经济孤立状态的印证。山西曾是中国最富裕的省份之一，也是中国银行业和商业中心，却在军阀时代之初的剧变中落入了极端贫困的深渊。该地区之所以只在名义上隶属于我方政府，是因为吴佩孚直到20年代末也没法彻底驱逐阎锡山和冯玉祥。他们或许狂妄自大，但其实构不成太大威胁。不过这或许正是当前形势的反映——我军仍然占领着山西东部（这正在动摇山西政府的执政地位），双方关系因此持续紧张。"
