--- a/localisation/ideologies_l_simp_chinese.yml
+++ b/localisation/ideologies_l_simp_chinese.yml
@@ -49,6 +49,8 @@
  traditional_tridemism_subtype:0 "传统三民主义"
  traditional_tridemism_subtype_desc:0 "§Y传统三民主义§!\n\n传统三民主义指的是以国民党元老居正为首的“西山派”对孙文创立的三民主义的再诠释，传统三民主义认为孙文的三民主义是坚定地立足于中华传统文化，故应该坚定传承传统而非摒弃他。传统三民主义坚定地反对工团主义和”披着工团主义皮的伪三民主义“，主张不断用儒家思想和传统道德来熏陶改造中华人的思想，从而保护中华民族不再被西方列强所欺侮，保护中国老百姓不受诸如”阶级斗争”、工团主义等西方思想所荼毒对同胞进行残害，而是让炎黄子孙在古代先贤丰厚的思想宝藏的指引下有机地团结在一起永不分离。"
 
+ authdem_yan_xishan_thought_subtype:0 "阎锡山思想"
+ authdem_yan_xishan_thought_subtype_desc:0 "§Y阎锡山思想§!\n\n阎锡山思想即指阎锡山本人的政治观念。实际上他有着极大的实用主义乃至投机的色彩，对各种政治思想理论中对自己有用的兼容并收来服务于阎锡山自己或者说国家的存活，他将自己这种思想称为“中的思想”\n\n阎锡山提倡传统主义，推崇儒家思想为中心的封建伦理道德；但是同时又推动进行了废除裹脚陋习、剪发、禁烟等一系列进步行为。同时，阎锡山强调村本政治，认为行政之本在于村庄，大力完善农村的政治体制和经济管理体制，同时又推动大力推动实业和工业化现代化的发展。\n\n阎锡山认为只有军国主义可以救中国，认为军事和军队必须在政治中优先或者主导。同时又强调发展“用民政治”从而调动群众来帮助阎锡山进行统治。用民政治模仿孙文提倡三民，不过不同于孙文带有民主主义倾向。阎锡山强调“民智、民德和民财”，通过发展义务教育普及民智，通过宣传传统文化伦理宣扬民德，通过发展实业和稳定政治发展民财，故阎锡山也提倡推动政治稳定和避免参与军阀混战从而为发展提供良好的环境。\n\n阎锡山还反对党派政治，认为党派政治混乱和和落后的根源，提倡效忠于自己的军人和政客官僚“不入党、不为个人权利用兵、服从中央命令、保卫地方治安”，从而让各位军人和文官专心一意地为自己也就是为国家服务。"
  autdem_technocratic_tridemism_subtype:0 "技官三民主义"
  autdem_technocratic_tridemism_subtype_desc:0 "§Y技官三民主义§!\n\n孙中山为了实现“民族、民权、民生”的梦想，将“政权”和“治权”分离，政权归属民众，而治权则给更加专业的政客和公务员。这最终使得国民党内技术官僚提出应该用技术官僚理性专业的执政来维持国家的运行，推动国家民族不断平稳地前进，这种思想也被叫做技官三民主义。\n\n技官三民主义强调以一个理性总体的国家角度看待国内事务，故其大多支持国家资本为基础的国有垄断形式来进行阶级调和。"
  authdem_lianshengism_subtype:0 "联省主义"
