傅作义要来抓阎锡山的妈妈

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -326,7 +326,7 @@
  SHX_looming_gmj_coup:0 "国民军正在酝酿政变"
  SHX_looming_gmj_coup_desc:0 "自从冯玉祥与阎锡山闹掰后，旧有的阎冯二元体制就开始摇摇欲坠。据报道，国民军已经驻扎在了陕西，以及虽然两人仍持续就省政事务进行沟通，但所有人都能看见冲突之兆。很显然，冯玉祥已经开始组织他那之前处于蟄伏的革命军队，积极行动以争取整个地区的支持。一场革命，或者说一场政变已经迫在眉睫，一山难容二虎，山西的大地上最终只能有一个领导者。\n\n§R如果时间用尽，国民军将成功推翻阎锡山的政府，并建立一个属于他们自己的政府。各类国策、决议和事件将使你能延长或缩短这个时间。§!"
  SHX_special_coup_circumstances_tooltip:0 "§R除非遭受外敌入侵或者其他特殊情况，否则山西的权力斗争将总是以清洗或革命结束。如果国民军错过机会，阎锡山将继续主导政局§!"
- SHX_special_coup_circumstances_shao_tooltip:0 "§R除非遭受外敌入侵或者其他特殊情况，否则山西的权力斗争将总是以清洗或革命结束。山西需要一个稳定的政府，但为什么一定要是阎锡山或者冯玉祥呢？但是请注意，你必须在阎冯二人决出胜负前干掉他们两个，否则将失去机会§!"
+ SHX_special_coup_circumstances_shao_tooltip:0 "§R除非遭受外敌入侵或者其他特殊情况，否则山西的权力斗争将总是以清洗或革命结束。山西需要一个稳定的政府，但为什么一定要是阎锡山或者冯玉祥呢？\n\n但是请注意，你必须在阎冯二人决出胜负前干掉他们两个，否则将失去机会§!"
  SHX_purge_the_gmj:0 "清洗国民军"
  SHX_purge_the_gmj_desc:0 "自从冯玉祥与阎锡山闹掰后，旧有的阎冯二元体制就开始摇摇欲坠。据报道，国民军已经驻扎在了陕西，以及虽然两人仍持续就省政事务进行沟通，但所有人都能看见冲突之兆。阎锡山的官僚机构异常活跃，他们正孜孜不倦地解决问题，并为他们的山西主子大肆宣传。很明显，冯玉祥的赌博开始失败了——他正在失去对陕西的控制，农民开始反对他。阎锡山和其效忠派的一次决定性打击将彻底消除国民军的威胁！"
  SHX_shao_zhuang_pai_zai_yun_dong:0 "少壮派在运动"
@@ -618,7 +618,7 @@
  SHX_strengthen_feng_small_tooltip: "§g冯玉祥§!的§Y权力§!§G小幅增长！§!"
  SHX_strengthen_feng_medium_tooltip: "§g冯玉祥§!的§Y权力§!§G中幅增长！§!"
  SHX_strengthen_feng_large_tooltip: "§g冯玉祥§!的§Y权力§!§G大幅增长！§!"
- SHX_revolution_all_time_tooltip: "§R激进度§!§将G小幅增长！§!"
+ SHX_revolution_all_time_tooltip: "§R激进度§!§将§G小幅增长！§!"
  SHX_revolution_small_tooltip: "§R激进度§!将§G小幅增长！§!"
  SHX_revolution_medium_tooltip: "§R激进度§!将§G中幅增长！§!"
  SHX_revolution_large_tooltip: "§R激进度§!将§G大幅增长！§!"
@@ -1379,7 +1379,37 @@
  SHX_jin_bu_zhi_sheng:0 "进步之省"
  SHX_jin_bu_zhi_sheng_desc:0 "随着国民军内部的左翼派系和左翼人士共同执掌山西，山西也成为了一个各个左翼人士心中的进步之省。而在诸多进步人士和社会稳定因素的共同作用下，山西也将迎来一个繁荣的未来。"
  SHX_xian_dai_hua_mo_fan:0 "现代化模范省"
- SHX_xian_dai_hua_mo_fan_desc:0 "在冯玉祥和他的国民军在山西执政后，山西也迎来了翻天覆地的变化。日新月异的变化也使得山西变的越来越现代化，成为了人民口中津津乐道的现代化模范省。随着政局的日渐稳定，未来和全国也在等着冯玉祥和他的国民军。"
+ SHX_xian_dai_hua_mo_fan_desc:0 "冯玉祥与阎锡山旧部的合作相得益彰，双方的理念相互交融，山西走在稳定现代化的道路上，所有人都在期许的未来，这或许是辛亥革命以来，山西最有希望的岁月，也许几十年之后人仍会有人怀念这段时光。"
+
+ #傅作义
+ SHX_shao_zhuang_pai_shang_tai:0 "少壮派掌控省政府"
+ SHX_shao_zhuang_pai_shang_tai_desc:0 " "
+ SHX_geng_wen_he_de_zhen_fu:0 "更温和的阎锡山思想"
+ SHX_geng_wen_he_de_zhen_fu_desc:0 " "
+ SHX_min_zhu_xuan_yan:0 "军政分离"
+ SHX_min_zhu_xuan_yan_desc:0 " "
+ SHX_you_xian_zhi_you_hua:0 "有限自由化"
+ SHX_you_xian_zhi_you_hua_desc:0 " "
+ SHX_you_xian_si_you_hua:0 "部分私有化"
+ SHX_you_xian_si_you_hua_desc:0 " "
+ SHX_si_you_jiao_yu:0 "扩建乡村学校"
+ SHX_si_you_jiao_yu_desc:0 " "
+ SHX_tui_dong_yi_yuan_zhi_xuan:0 "推动百姓监督"
+ SHX_tui_dong_yi_yuan_zhi_xuan_desc:0 " "
+ SHX_chong_zu_shang_hui:0 "重组商会"
+ SHX_chong_zu_shang_hui_desc:0 " "
+ SHX_min_zhu_sheng_fu:0 "人民的省府"
+ SHX_min_zhu_sheng_fu_desc:0 " "
+ SHX_hun_he_xian_dai_hua:0 "温和工业化"
+ SHX_hun_he_xian_dai_hua_desc:0 " "
+ SHX_ru_xue_xian_dai_hua:0 "儒学现代化"
+ SHX_ru_xue_xian_dai_hua_desc:0 " "
+ SHX_nong_cun_di_yi_wei:0 "农村第一位"
+ SHX_nong_cun_di_yi_wei_desc:0 " "
+ SHX_cha_feng_xie_jiao:0 "查封邪教"
+ SHX_cha_feng_xie_jiao_desc:0 " "
+ SHX_shan_xi_ren_de_shan_xi:0 "山西人的山西"
+ SHX_shan_xi_ren_de_shan_xi_desc:0 " "
 
 #事件
  shx.0.t:0 "晋系军阀"
