--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -326,7 +326,7 @@
  SHX_looming_gmj_coup:0 "国民军正在酝酿政变"
  SHX_looming_gmj_coup_desc:0 "自从冯玉祥与阎锡山闹掰后，旧有的阎冯二元体制就开始摇摇欲坠。据报道，国民军已经驻扎在了陕西，以及虽然两人仍持续就省政事务进行沟通，但所有人都能看见冲突之兆。很显然，冯玉祥已经开始组织他那之前处于蟄伏的革命军队，积极行动以争取整个地区的支持。一场革命，或者说一场政变已经迫在眉睫，一山难容二虎，山西的大地上最终只能有一个领导者。\n\n§R如果时间用尽，国民军将成功推翻阎锡山的政府，并建立一个属于他们自己的政府。各类国策、决议和事件将使你能延长或缩短这个时间。§!"
  SHX_special_coup_circumstances_tooltip:0 "§R除非遭受外敌入侵或者其他特殊情况，否则山西的权力斗争将总是以清洗或革命结束。如果国民军错过机会，阎锡山将继续主导政局§!"
- SHX_special_coup_circumstances_shao_tooltip:0 "§R除非遭受外敌入侵或者其他特殊情况，否则山西的权力斗争将总是以清洗或革命结束。山西需要一个稳定的政府，但为什么一定要是阎锡山或者冯玉祥呢？\n\n但是请注意，你必须在阎冯二人决出胜负前干掉他们两个，否则将失去机会§!"
+ SHX_special_coup_circumstances_shao_tooltip:0 "§R除非遭受外敌入侵或者其他特殊情况，否则山西的权力斗争将总是以清洗或革命结束。山西需要一个稳定的政府，但为什么一定要是阎锡山或者冯玉祥呢？§!\n\n§R但是请注意，你必须在阎冯二人决出胜负前干掉他们两个，否则将失去机会§!"
  SHX_purge_the_gmj:0 "清洗国民军"
  SHX_purge_the_gmj_desc:0 "自从冯玉祥与阎锡山闹掰后，旧有的阎冯二元体制就开始摇摇欲坠。据报道，国民军已经驻扎在了陕西，以及虽然两人仍持续就省政事务进行沟通，但所有人都能看见冲突之兆。阎锡山的官僚机构异常活跃，他们正孜孜不倦地解决问题，并为他们的山西主子大肆宣传。很明显，冯玉祥的赌博开始失败了——他正在失去对陕西的控制，农民开始反对他。阎锡山和其效忠派的一次决定性打击将彻底消除国民军的威胁！"
  SHX_shao_zhuang_pai_zai_yun_dong:0 "少壮派在运动"
