--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -6,30 +6,41 @@
  SHX_FU_ADJ: "山西"
  SHX_FU_DEF: "山西"
  SHX_FU_paternal_autocrat: "晋系军阀"
+ SHX_FU_paternal_autocrat_ADJ: "山西"
  SHX_FU_paternal_autocrat_DEF: "晋系军阀"
  SHX: "山西"
  SHX_ADJ: "山西"
  SHX_DEF: "山西"
- SHX_totalist: "晋系军阀"
- SHX_totalist_DEF: "晋系军阀"
- SHX_syndicalist: "晋系军阀"
- SHX_syndicalist_DEF: "晋系军阀"
- SHX_radical_socialist: "晋系军阀"
- SHX_radical_socialist_DEF: "晋系军阀"
- SHX_social_democrat: "山西"
- SHX_social_democrat_DEF: "晋系军阀"
- SHX_social_liberal: "山西"
- SHX_social_liberal_DEF: "晋系军阀"
- SHX_market_liberal: "山西"
- SHX_market_liberal_DEF: "晋系军阀"
- SHX_social_conservative: "山西"
- SHX_social_conservative_DEF: "晋系军阀"
- SHX_authoritarian_democrat: "国民军政府"
- SHX_authoritarian_democrat_DEF: "国民军政府"
- SHX_paternal_autocrat: "晋系军阀"
- SHX_paternal_autocrat_DEF: "晋系军阀"
- SHX_national_populist: "晋系军阀"
- SHX_national_populist_DEF: "晋系军阀"
+ SHX_totalist:0 "山西公社"
+ SHX_totalist_ADJ:0 "山西"
+ SHX_totalist_DEF:0 "山西公社"
+ SHX_syndicalist:0 "山西公社"
+ SHX_syndicalist_ADJ:0 "山西"
+ SHX_syndicalist_DEF:0 "山西公社"
+ SHX_radical_socialist:0 "国民军"
+ SHX_radical_socialist_ADJ:0 "国民军"
+ SHX_radical_socialist_DEF:0 "国民军"
+ SHX_social_democrat:0 "国民军"
+ SHX_social_democrat_ADJ:0 "国民军"
+ SHX_social_democrat_DEF:0 "国民军"
+ SHX_social_liberal:0 "山西"
+ SHX_social_liberal_ADJ:0 "山西"
+ SHX_social_liberal_DEF:0 "山西"
+ SHX_market_liberal:0 "山西"
+ SHX_market_liberal_ADJ:0 "山西"
+ SHX_market_liberal_DEF:0 "山西"
+ SHX_social_conservative:0 "山西"
+ SHX_social_conservative_ADJ:0 "山西"
+ SHX_social_conservative_DEF:0 "山西"
+ SHX_authoritarian_democrat:0 "国民军政府"
+ SHX_authoritarian_democrat_ADJ:0 "山西"
+ SHX_authoritarian_democrat_DEF:0 "国民军政府"
+ SHX_paternal_autocrat:0 "晋系军阀"
+ SHX_paternal_autocrat_ADJ:0 "山西"
+ SHX_paternal_autocrat_DEF:0 "晋系军阀"
+ SHX_national_populist:0 "晋系军阀"
+ SHX_national_populist_ADJ:0 "山西"
+ SHX_national_populist_DEF:0 "晋系军阀"
  SHX_NCPC: "西北政务委员会"
  SHX_NCPC_ADJ: "西北政务委员会"
  SHX_NCPC_DEF: "西北政务委员会"
@@ -268,37 +279,6 @@
  SHX_feng_anbang: "冯安邦"
  POLITICS_FENG_ANBANG_DESC:0 "§Y陆军将领介绍\n生于：§!§g1884年；大清帝国、山东省无棣县§!\n§Y派系：§!§g国民军§!\n§Y军旅生涯：§!§g冯安邦来自山东，他家在当地颇有声望，家境富裕，但到了光绪年间冯安邦出生时，冯家已经家道中落、贫困不堪，他年纪轻轻就被迫外出打工维持生计。1900年，义和团运动的烈火熊熊燃烧，冯安邦也加入了这一反租界运动，誓要终结几十年来帝国主义对中国的侵略。\n\n辛亥革命后，他加入了冯玉祥的第16混成旅，任骑兵排长；1917年，他参与了冯玉祥讨伐张勋复辟的“讨逆军”；1921年，他跟随冯玉祥讨伐陕西督军陈树藩。大约在这个时期，冯安邦晋升第11师工兵11营连长。1924年，他参与了冯玉祥发动的北京政变，国民军兵败后，他跟随冯玉祥转进山西。§!\n\n§Y重要信息：他是最早追随冯玉祥的军官之一，也是对冯最忠诚的。"
 
- SHX_totalist:0 "山西公社"
- SHX_totalist_ADJ:0 "山西"
- SHX_totalist_DEF:0 "山西公社"
- SHX_syndicalist:0 "山西公社"
- SHX_syndicalist_ADJ:0 "山西"
- SHX_syndicalist_DEF:0 "山西公社"
- SHX_radical_socialist:0 "国民军"
- SHX_radical_socialist_ADJ:0 "国民军"
- SHX_radical_socialist_DEF:0 "国民军"
- SHX_social_democrat:0 "国民军"
- SHX_social_democrat_ADJ:0 "国民军"
- SHX_social_democrat_DEF:0 "国民军"
- SHX_social_liberal:0 "山西"
- SHX_social_liberal_ADJ:0 "山西"
- SHX_social_liberal_DEF:0 "山西"
- SHX_market_liberal:0 "山西"
- SHX_market_liberal_ADJ:0 "山西"
- SHX_market_liberal_DEF:0 "山西"
- SHX_social_conservative:0 "山西"
- SHX_social_conservative_ADJ:0 "山西"
- SHX_social_conservative_DEF:0 "山西"
- SHX_authoritarian_democrat:0 "国民军"
- SHX_authoritarian_democrat_ADJ:0 "国民军"
- SHX_authoritarian_democrat_DEF:0 "国民军"
- SHX_paternal_autocrat:0 "晋系军阀"
- SHX_paternal_autocrat_ADJ:0 "山西"
- SHX_paternal_autocrat_DEF:0 "晋系军阀"
- SHX_national_populist:0 "晋系军阀"
- SHX_national_populist_ADJ:0 "山西"
- SHX_national_populist_DEF:0 "晋系军阀"
-
 #决议
  SHX_power_balance: "逐鹿山西"
  SHX_yan_winning_side: "阎锡山与省政府"
@@ -331,6 +311,9 @@
  SHX_purge_the_gmj_desc:0 "自从冯玉祥与阎锡山闹掰后，旧有的阎冯二元体制就开始摇摇欲坠。据报道，国民军已经驻扎在了陕西，以及虽然两人仍持续就省政事务进行沟通，但所有人都能看见冲突之兆。阎锡山的官僚机构异常活跃，他们正孜孜不倦地解决问题，并为他们的山西主子大肆宣传。很明显，冯玉祥的赌博开始失败了——他正在失去对陕西的控制，农民开始反对他。阎锡山和其效忠派的一次决定性打击将彻底消除国民军的威胁！"
  SHX_shao_zhuang_pai_zai_yun_dong:0 "少壮派在运动"
  SHX_shao_zhuang_pai_zai_yun_dong_desc:0 "并非只有阎锡山和冯玉祥在谋求彻底打垮对方，在他们的手底下，以阎派傅作义、冯派杨虎城为代表的一群人也在蓄谋着更进一步，他们不断接触，打着阎锡山和冯玉祥的名号为自己谋求利益。同时北京方面也乐于见得山西陷入更深的混乱，在背后不断的援助。"
+ SHX_shan_dong_jun_dui:0 "煽动军队"
+ SHX_li_yong_zhi_xi:0 "寻求北京支援"
+ SHX_kong_he_fan_dui_pai:0 "恐吓反对派"
  #教育
  Feng_taking_SHX_education_for_all: "重视基础教育"
  Feng_taking_increase_school_taxes: "增加办学税"
@@ -456,6 +439,8 @@
  SHX_crackdown_foreign_agitators_desc:0 "我们必须定期清理门户以保护山西不受省外阴谋破坏。虽然大多数的省府人员都在收各种形式的贿赂，但一系列针对问题赃款来源的突击搜查可以将这些首鼠两端的家伙清理出去。"
  SHX_shen_cha_foreign_agitators:0 "媒体审查"
  SHX_shen_cha_foreign_agitators_desc:0 "严格的新闻审查阻止了民众接触到任何异议，并确保了他们只能了解我们政权的想法。"
+ SHX_jian_mian_jun_fei:0 "减免山西军费"
+ SHX_jian_mian_jun_fei_desc:0 "通常而言驻军皆由当地政府负责军费开支，但是我们可以与中央政府达成协约，减免一部分山西军费负担。"
 
  SHX_QIE_shanxi_diplomacy_decisions_category:0 "我们在山西的利益"
  SHX_QIE_shanxi_diplomacy_decisions_category_desc:0 "晋系军阀，它的崇山峻岭和两支军队，一直都是我们的麻烦所在。我们有不少手段令其保持顺从，并且§G随着形势发展，更多手段将摆上台面§!。维持我们的影响力对保卫西北十分重要。\n\n\n\n晋系能否反抗我们，关键在于其§Y战争支持度§!。要想保持国家统一，我们就万不可让他们的§Y战争支持度§!增长得太高。晋系的§Y战争支持度§!目前为[?SHX.has_war_support|%R0]\n\n除此之外，还要警惕持革命思想、同我们对立的国民军不断增长的影响力。§!§C当前，国民军[SHX.GMJ_coup_strength]。§!§!\n\n鉴于过去的敌意，晋系军阀虽然名义上服从我们，实际情况却令人难以放心。然而，八省联合崩溃后的局势使我们很难找到机会，去改变与晋系及其领导层之间的关系。在这场互动中，太原和北京将分别操纵局面，使其对己方更加有利。保证我方§G影响力处于高位§!，对方§Y战争支持度处于低位§!，同时将§R国民军§!排除在权力中心之外，如此方能让晋系同我们的利益保持一致。\n\n[Root.GetNameDefCap][Root.GetFlag]拥有[?SHX.SHX_QIE_influence_variable|0]%§H经济影响力§!"
@@ -584,6 +569,8 @@
 
  SHX_model_governor:0 "模范督理"
  SHX_model_governor_desc:0 "阎锡山能得到这一绰号要归功于段祺瑞，同时他对媒体（通常是国际媒体）面前的表演也为他赢得了一些声誉。他亲自指挥战斗的行为也为他博取了不少关注，也许让他当这个领袖是最合适的选择。"
+ SHX_bu_yi_general:0 "布衣将军"
+ SHX_bu_yi_general_desc:0 "傅作义极受部下拥戴，他力行节俭，经常能看到他穿着和士兵一样的棉衣，这让他获得了“布衣将军”的美名。"
  SHX_christian_general:0 "基督将军"
  SHX_christian_general_desc:0 "冯玉祥的绰号来自于他的基督教信仰和他用基督教道德观激励手下士兵的行为。冯玉祥本人就是国民军精神的具现。虽然他对基督教的虔诚和他对教义的理解深度备受争议，却也从未动摇他的热忱。"
  SHX_gmj_officer: "国民军将领"
@@ -622,7 +609,8 @@
  SHX_revolution_small_tooltip: "§R激进度§!将§G小幅增长！§!"
  SHX_revolution_medium_tooltip: "§R激进度§!将§G中幅增长！§!"
  SHX_revolution_large_tooltip: "§R激进度§!将§G大幅增长！§!"
- SHX_increase_revolution_small_tooltip: "§R激进度§!§!§Y小幅减少！§!"
+ SHX_decrease_revolution_small_tooltip: "§R激进度§!§!§Y小幅减少！§!"
+ SHX_decrease_revolution_medium_tooltip: "§R激进度§!§!§Y中幅减少！§!"
  SHX_GMJ_leaves_coalition_tooltip: "§R国民军离开了我们的联盟。§!"
  SHX_commissars_tt: "§L完成这个国策将会允许我们加强阎锡山或冯玉祥的影响力。§!"
  SHX_prepare_for_the_storm_effect_tt: "在§Y晋西§!的每个地块建造2个£GFX_land_fort_texticon §Y$bunker_plural$§!"
@@ -860,7 +848,9 @@
  SHX_lategame_begin_flag: "§G我们已经凭借自己的努力成为了一股不可忽视的势力§!"
  SHX_Yan_purpose: "§L我们决定追随阎锡山对山西未来的展望§!。"
  SHX_Feng_purpose: "§L我们决定接纳冯玉祥对山西未来的展望§!。"
-
+ SHX_avocation_tooltip: "§G为什么不来一把呢？§!"
+ SHX_wealth_and_power_tooltip: "§C解锁决议来管理影响力等级§!"
+ 
 #国家精神
  SHX_neutrality:0 "山西中立政策"
  SHX_neutrality_desc:0 "山西群山环绕，周围的邻居都与其关系紧张，因此其领导层在政治和外交上深陷孤立主义。讽刺的是，在直系的惨胜下，正是山西高层这种长期闭关自守的心态给了他们一线生机。但是，这种地方主义也让人民对任何向外的干涉都不感兴趣，如果阎冯的志向不限于太原，就需要用一个共同的愿景来团结人民。"
@@ -1059,6 +1049,8 @@
  SHX_decisive_first_strike_idea_desc:0 "西北地区的局势日益紧张，边境沿线不断传来边境冲突、袭击和炮击的报告。除了士兵在当地建造的碉堡和哨所，许多边界已形同虚设。民兵正在接受训练，游击队在草原上做着准备，骑兵在我们正规军先遣部队的前面行进。\n\n如果我们想在西北地区取得胜利，我们就必须做好准备，给我们的对手一记迎头痛击。我们的行动将扫清他们的布局，并击破他们所预备的所有防线。考虑到我们在该地区所能达成的目标有限，一次成功的挺进应该能确保我们在谈判桌上取得有利地位，并有望避免旷日持久的冲突。"
  SHX_hui_cavalry_idea:0 "受驯的回族骑兵"
  SHX_hui_cavalry_idea_desc:0 "西北地区的回民擅长在当地崎岖地形上作战，自20世纪10年代以来为中原政权提供了大量经验丰富的老兵，是一股不可忽视的力量。他们尤其重视突击骑兵和适应多条件的侦察兵，即便是蒙古人也感到头疼。在西北战争失败后，许多人心怀怨恨，经信仰、民族、掠夺或者复仇心理的驱使，希望在自己的长官手下为我军服役。我们自然欢迎他们的加入，但坏消息是，回民对我军的兴趣和他们提供的对敌先发优势将随时间逐渐丧失。但这不过是在激励我们尽快出发夺取更多胜利，让他们作为骑手的荣耀流芳百世！"
+ SHX_strengthened_assembly:0 "军政分离"
+ SHX_strengthened_assembly_desc:0 "从此以后，军队在驻地只能进行训练，不负责地方防务，也不得就地补给而由省政府另行统一筹划。军队跟当地政治不在能够发生任何关系。"
 
  SHX_model_province_taiyuan:0 "模范省的心脏"
  SHX_model_province_taiyuan_desc:0 "太原是阎锡山政府的掌上明珠，长期受到省政府的高度偏爱。在我们的英明统治下，以进步改革为傲的太原已成为我省打造模范省形象以供他人膜拜的中心。"
@@ -1472,6 +1464,16 @@
  shx.earlygame.16.t:0 "省议会"
  shx.earlygame.16.d:0 "议长的发言还没有结束，冯阎两派的议员们便早早的吵作一团，相互嘘声。尽管，两派的大佬们互相都和和气气的，说些你好我好大家好的话。但是议院内，预算、法案、政策一切的提案双方都无法达成共识。久而久之，这些基本上毫无军事背景的议员们甚至不止一次在议院内上演全武行，更甚至一次议期内发生多次斗殴，早上一帮阎派议员刚把冯派议员打进医院，下午又被更多冯派议员围殴。一方动手，另一方火速跟上，能动手的事情他们绝不含糊，南拳北腿，纸笔座椅板凳一切顺手的东西都是他们的武器，单挑、群架、男单、男双，花样百出，上演一场又一场“铁血战役”，议院简直是一场又一场武斗大会。省内的花边小报还常常列出议员拳王表，从议员们的“战绩”中品鉴议员们的拳脚功夫。而比起议员们的暴力，国民军和晋绥军的克制反而显得尤为珍贵，令北京来的观察员不禁摇头叹息。"
  shx.earlygame.16.a:0 "勃勃生机"
+ shx.earlygame.17.t:0 "打倒汉奸！"
+ shx.earlygame.17.d:0 "反帝国主义和反外情绪在政治领域空前高涨，文化领域也不可避免地受到了波及。自从德国人和他们那可恨的东亚总督监事会连连犯下恶行，反德情绪便是一浪高过一浪。晋南的一个地方剧团表演了一场名为《打倒汉奸》的独幕押韵剧，起到了极大的宣传效果。这出以当地方言表演的戏剧，其作者正是山西人赵树理。\n\n赵树理出生在山西的一个贫苦农民家庭，后有幸进入长治的一所公费师范学校就读。赵树理的祖父信仰三教合一，他因而在兼容并蓄思想的熏陶下长大。此外，他还接触了不少“现代”国家的名人名事，如乔治·华盛顿、法国大革命、工业化、屠格涅夫和易卜生等。赵树理虽不是社会主义者，却曾经在北伐期间受太原当局的政治偏执所害，遭到囚禁逼供。狱卒见他道不出任何社会主义言论，只好塞给他一本社会主义小册子，令他读完后再招供。赵树理最终重获自由，然而，当他看见自己的家人饱受地主欺凌的那一刻，他毅然走上了左翼的道路。政府一直紧盯着赵树理和他的同伴，但他对中国北方农村生活的艺术描绘依然为自己赢得了喝彩（以及保护）。"
+ shx.earlygame.17.a:0 "真是一场好戏！"
+ shx.earlygame.18.t:0 "早起会"
+ shx.earlygame.18.d:0 "织一张网，看重的不仅仅是结实性，还有能否在原基础上发展和变化。社会的运转也是此理：既要稳如泰山，经受得住时代的考验；也要具备在必要时刻灵活应变的能力。不论革命派还是保守派，打击罪恶是中国所有改革者共同的目标。而在山西，一个现代化的“进步”政府正致力于消除其眼中的种种社会弊病，如卖淫、性变态、行事懒惰马虎，以及其他一系列“社会犯罪”，包括赌博、打架斗殴和使用旧历等等。\n\n作为该省消除“落后现象”的表现之一，早起会每天早上都会在全省各地集会，挨家挨户敲门，并将那些六点以后仍呼呼大睡的人记录在案。童子军、政府官员和各类民间团体负责监督一切违规行为，学童们会亲自走进违规者的家中大声叫嚷，直至其出面道歉为止。犯下其他违规行为者则会在大街上被人人（包括孩子）喊打，听人们高喊“你这坏人，就不能学好点？”这些参与者的动力不一，他们中有些是喜欢大场面，有些只是想避免遭到攻击。但不论好坏，社会强迫已然对当地的文化施加了不小的影响。"
+ shx.earlygame.18.a:0 "起床啦！太阳晒屁股啦！"
+ shx.earlygame.19.t:0 "主业与副业"
+ shx.earlygame.19.d:0 "赌博在全省各地都是种非常常见（几乎无人不赌）的消遣方式，哪怕政府通过了许多将其定为罪行的法令。1934年时，阎锡山又发起了一场对抗“游手好闲”的运动，将赌博正式定为罪行，还抓了上千人。冯玉祥和国民军也有为禁赌运动出力，他们会迫犯赌者戴着写有其罪行的牌子游街示众。据说冯玉祥甚至请了一批妇女，让她们深入民居调查赌博。不过山西的赌况仍未见好转。\n\n而一大群沉迷赌博的官员自然也于事无补。县长和其僚属经常会在夜里赌至天明，然后因为过于疲劳无法履行公职。有一次，有人听到[Root.GetLeader]大声怒斥“赌钱是他们的正业，其他一切都只不过是副业！”并气愤地宣告赌博是实现十年计划目标的威胁。不论赌博是恶习与否，情形在短期内都不会改善。"
+ shx.earlygame.19.a:0 "这只不过是一种打发时间的方式而已..."
+ shx.earlygame.19.b:0 "真可耻..."
 
  shx.yan.1.t:0 "官僚体系的最新状况"
  shx.yan.1.d:0 "建立一个中央集权的官僚系统是晋系未来最看重的目标之一，为此我们实施了许多方案，在最近终于起了点成效。山西只有一百多个县，每个县都需要一个县长，而县长又需要一个行政人员来协助管理。大多数县又被分成了三到六个区，每个区由一名副县长管辖。这些县长在太原培训中心和行政学院学习，并在新成立的乡镇局下任职。\n\n坏消息是，腐败横行，过去很长一段时间行政部门为了避免开革太多人而拒绝采用业绩考察机制。许多官员甚至大字不识几个，尸位素餐，还经常侵吞公产、勒索百姓。我们对此实施的第一批举错之一是废除包税制，并且把那些尸位素餐和贪污受贿的家伙扫地出门。虽然还有不少事要做，但千里之行，始于足下。"
@@ -1662,7 +1664,7 @@
  shx.mil.4.a:0 "祝他们一路逆风。"
 
  shx.powerstruggle.3.t:0 "阎锡山清洗国民军"
- shx.powerstruggle.3.d:0 "冯玉祥赌输了！在大约一个星期前，太原各地发出了一系列逮捕令——数千名涉及叛变的嫌疑人与潜在地下破坏者被逮捕。与此同时，山西省军队接到了前往延安恢复当地秩序的命令，并将国民军赶出陕西省。在晋军自豪地穿越陕西时，绝大多数当地百姓都无动于衷，甚至有人为国民军的灭亡叫好，几乎没有人反抗阎督理手下这支装备精良的精锐省军。既没有准备，亦没有能力对抗太原造火炮的国民军在战斗中兵败如山倒。一群曾向省政府举报国民军成员的农民也自发粉碎了一场国民军发动长期叛乱的企图。国民军成员现在像土匪一样被政府悬赏，而山西人民忠于谁亦不言自明。\n\n一切已经尘埃落定，阎锡山赢了，他在一场快速清洗后牢牢控制了山西，他的掌上明省。除了国民军外，晋系当局也追捕了激进学生组织、左翼分子以及不愿与太原政府合作的共和派。相信冯玉祥已经逃往俄罗斯，并希望在当地获得东山再起的资金，但他不太可能在事业寿终正寝后得到援助。善后要花上几个星期，但考虑到当时的情况，事态发展可谓相当顺利。阎锡山仍是山西省的主人，但他有没有能耐问鼎华北还是未知之数。而他的老师，年迈的赵戴文终于能够从省长的位置上卸下来了。"
+ shx.powerstruggle.3.d:0 "冯玉祥赌输了！在大约一个星期前，太原向各地发出了一系列逮捕令——数千名涉及叛变的嫌疑人与潜在地下破坏者被逮捕。与此同时，山西省军队接到了前往延安恢复当地秩序的命令，并将国民军赶出陕西省。在晋军自豪地穿越陕西时，绝大多数当地百姓都无动于衷，甚至有人为国民军的灭亡叫好，几乎没有人反抗阎督理手下这支装备精良的精锐省军。既没有准备，亦没有能力对抗太原造火炮的国民军在战斗中兵败如山倒。一群曾向省政府举报国民军成员的农民也自发粉碎了一场国民军发动长期叛乱的企图。国民军成员现在像土匪一样被政府悬赏，而山西人民忠于谁亦不言自明。\n\n一切已经尘埃落定，阎锡山赢了，他在一场快速清洗后牢牢控制了山西，他的掌上明省。除了国民军外，晋系当局也追捕了激进学生组织、左翼分子以及不愿与太原政府合作的共和派。相信冯玉祥已经逃往俄罗斯，并希望在当地获得东山再起的资金，但他不太可能在事业寿终正寝后得到援助。善后要花上几个星期，但考虑到当时的情况，事态发展可谓相当顺利。阎锡山仍是山西省的主人，但他有没有能耐问鼎华北还是未知之数。而他的老师，年迈的赵戴文终于能够从省长的位置上卸下来了。"
  shx.powerstruggle.3.a:0 "好好好。"
  shx.powerstruggle.4.t:0 "国民军起义"
  shx.powerstruggle.4.d:0 "看来阎锡山的运数已尽！在大约一个星期前，国民军先头部队从延安开拔向太原挺进，为国民军大部队的进军开辟道路。晋军受命前去对付他们，他们规模更庞大，装备更精良。但他们很快就遭到突袭，被国民军小股部队围困并击溃。如果没有民众大力支持的话，国民军不可能推进得如此迅速。山西省军显然接到了噩报，他们弃械而逃，留下了不可多得的太原造火炮和价值不菲的步枪。陷入绝境的阎锡山打算死守太原，等待北京救援，但他的计划因商震将军和其他军官、共和派及城中学生发起的内部政变而宣告破产。数十年的阎锡山时代即将迎来终结！\n\n一切已经尘埃落定，冯玉祥赢了——他在一场几乎兵不血刃的快速起义中占领了山西。不少乡绅、商贾及阎派人士都仓皇而逃，而余下的大多数派系都已经向国民军宣誓效忠。据猜测，阎锡山本人携带其大部分身家逃往海外，但也有传闻指他其实回到了河边村老家，并被软禁于家里。新政府将花上数个星期整合晋系残部，但考虑到当时的情况，事态发展可谓相当顺利。虽然欢呼声响彻了三晋大地，但冯玉祥及麾下将领都知道，要让同样的欢呼声响彻北京绝非易事。"
@@ -1706,8 +1708,8 @@
  shx.powerstruggle.12.d:0 "太原的街头上，贴满了对国民军残部的通缉令，虽然冯玉祥已经落网，杨虎城宣布切割，但是阎锡山督理对斩草除根这件事非常的执着。他加强了搜查力度，扬言：“让国民军反动分子葬身山西！”\n\n而在山西某处，几个人正对着一张中国地图沉思。良久，一个稍微年轻点的人开口了：“哲元，现在那老东西的爪牙在外面严查我们，我们下一步去哪里？”那位哲元先生吸了一口烟：“北京那边和阎老狗是一伙的，西边的马家军也不是什么好狗。按照地图上的信息来看，南京的控制者是国民党的汪精卫。我们同是国民革命军，他们应该会接纳我们。”\n\n这时，那个稍显头秃的人站起来：“对于这个建议，我是没有什么意见的，不过国民党内部混乱不堪。到时候记得别站队，明哲保身才是重要的。”“既然复渠都这么说了，那我们即日启程。”宋哲元讲完，立即准备动身。两个星期后，当张自忠等人站在南京城下的时候，汪精卫主席亲自出门迎接，为国民军众人安排了新的职位。并强调..."
  shx.powerstruggle.12.a:0 "革命尚未成功，我们必须团结能团结的所有力量..."
  shx.powerstruggle.13.t:0 "少壮派政变"
- shx.powerstruggle.13.d:0 " "
- shx.powerstruggle.13.a:0 " "
+ shx.powerstruggle.13.d:0 "就在阎冯斗争逐渐接近白热化时，却发生一些意想不到的转折。傅作义在太原城内发动了一场突如其来的政变，将省政府与阎锡山控制了起来，同时他的人立刻接管了晋绥军大营。随后，太原向各地发出了一系列逮捕令——数千名涉及叛变的嫌疑人与潜在地下破坏者被逮捕。晋绥军这立刻接到了前往延安恢复当地秩序的命令，并将国民军赶出陕西省。在晋军自豪地穿越陕西时，绝大多数当地百姓都无动于衷，甚至有人为国民军的灭亡叫好，几乎没有人反抗阎督理手下这支装备精良的精锐省军，他们甚至不知道太原城内发生的一切。既没有准备，亦没有能力对抗太原造火炮的国民军在战斗中兵败如山倒。一群曾向省政府举报国民军成员的农民也自发粉碎了一场国民军发动长期叛乱的企图。国民军成员现在像土匪一样被政府悬赏。\n\n一切已经尘埃落定，这场内斗最后却是傅作义赢了，他在一场快速清洗后牢牢控制了山西。善后要花上几个星期，但考虑到当时的情况，事态发展可谓相当顺利。他有没有能耐稳住局面还是未知之数..."
+ shx.powerstruggle.13.a:0 "意想不到的结局"
 
  shx.QIE.aid.1.t:0 "太原火车谈判脱轨"
  shx.QIE.aid.1.d:0 "虽然华南铁路项目的成功让东亚总督监事会的声望如日中天，但他们在北方就没那么好运了。其在北京福公司的子公司已经和固执的山西督理阎锡山谈判了数月，而我们的代表在其中充当中间人。虽然他们在争取诸如山西省银行总经理王骧等政府要员的支持上取得了相当大的进展，但谈判最终还是陷入了停滞。\n\n阎锡山（在心怀反意的冯玉祥大帅怂恿下）选择退出谈判，拒绝对我方要求让步，即在东亚监事会援建铁路项目（注意，这是我们资助的）中使用标准轨距，而不是阎锡山指定的窄轨距。他指责我们不仅试图破坏其自主权，还计划以此让我军日后侵略山西变得更容易。\n\n且不论这种指控有多么骇人，谈判的破裂就是山西自本世纪初起就一直处于经济孤立状态的印证。山西曾是中国最富裕的省份之一，也是中国银行业和商业中心，却在军阀时代之初的剧变中落入了极端贫困的深渊。该地区之所以只在名义上隶属于我方政府，是因为吴佩孚直到20年代末也没法彻底驱逐阎锡山和冯玉祥。他们或许狂妄自大，但其实构不成太大威胁。不过这或许正是当前形势的反映——我军仍然占领着山西东部（这正在动摇山西政府的执政地位），双方关系因此持续紧张。"
